Ajustes totais e inclusão de autenticação

--- a/.env
+++ b/.env
@@ -1,1 +1,13 @@
-JWT_SECRET = sua_chave_secreta
+JWT_SECRET=sua_chave_secreta
+DB_HOST=localhost
+DB_USER=joao@example
+DB_PASS=senha123
+DB_NAME=tutor_pet
+PORT=3000
+NODE_ENV=development
+TOKEN_EXPIRATION=3600
+CORS_ORIGIN=http://localhost:3000
+EMAIL_HOST=smtp.example.com
+EMAIL_PORT=587
+EMAIL_USER=joao@example.com
+EMAIL_PASS=senha123
