--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 JWT_SECRET=sua_chave_secreta
 DB_HOST=localhost
-DB_USER=joao@example
-DB_PASS=senha123
+DB_USER=root
+DB_PASS=1234
 DB_NAME=tutor_pet
 PORT=3000
 NODE_ENV=development
